# boolfun

./: .gitignore  .travis.yml  Makefile  README.md  master_production.sh  test.sh  test_production.sh
bits-lib/: bitslib.cpp  bitslib.hpp  defines.hpp  main.cpp
boolfun/: CMakeLists.txt  boolfun.sln  boolfun.vcxproj  boolfun.vcxproj.filters
boolfun/bits-lib/: main.cpp
boolfun/headers/: ANF.h  GF.h  bitslib.h  boolean_utils.h  ios.h  linear.h  polynom.h  test_api_header.h  ttable.h
boolfun/src/: ANF.cpp  GF.cpp  GFSimple.cpp  bitslib.cpp  bitslib.h  boolean_utils.cpp  ios.cpp  linear.cpp  main.cpp  polynom.cpp  polynom.h  tmp.cpp  ttable.cpp  ttable.h
boolfun/src/private_headers/: Binary.h  Field_polynom_table.h  GF_simple.h  Polynom.h  privpolynom.h  test_private_header.h
boolfun/test/: ANF.cpp  ANF.h  GF.cpp  GFSimple.cpp  GF_simple.h  Makefile  bitslib.cpp  bitslib.h  boolean_utils.cpp  boolean_utils.h  ios.cpp  main_test.c  main_test.cpp  polynom.cpp  polynom.h  sandbox.cpp  sandbox.h  ttable.cpp  ttable.h
